--- a/css/calc.css
+++ b/css/calc.css
@@ -8,7 +8,7 @@
 }
 
 h2 {
-	
+
 	font-family: Courier;
 	text-align: right;
 
@@ -28,7 +28,13 @@ h2 {
 	font-family: Courier;
 	background-color: #FFA500;
 }
-
+.operatorPlus {
+	width: 60px;
+	height: 60px;
+	font-size: 30px;
+	font-family: Courier;
+	background-color: #FFA500;
+}
 .equals {
 	width: 135px;
 	height: 60px;
